fix: resolve documentation display with scrollbar
fix gravitee-io/issues#3645

--- a/src/app/components/gv-documentation/gv-documentation.component.css
+++ b/src/app/components/gv-documentation/gv-documentation.component.css
@@ -26,9 +26,11 @@
   display: none;
   position: fixed;
   left: 42px;
-  height: calc(100vh - 150px);
   z-index: 100;
+  height: calc(100vh - 125px - 42px);
+  bottom: 42px;
 }
+
 .gv-documentation__menu.show {
   display: block;
 }
